--- a/artikel-offroad-coban-talun.html
+++ b/artikel-offroad-coban-talun.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panduan Lengkap Offroad di Coban Talun, Batu – Batu Outbound</title>
+    <title>Panduan Lengkap Offroad di Coban Talun, Batu – Batu Outbound Adventure</title>
+    <meta name="description"
+        content="Simak panduan lengkap offroad di Coban Talun, Batu. Info jalur, tips keselamatan, dan pengalaman seru dengan jeep 4x4." />
+    <link rel="canonical" href="https://advanturetimoutbound.vercel.app/artikel-offroad-coban-talun.html" />
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://advanturetimoutbound.vercel.app/artikel-offroad-coban-talun.html" />
+    <meta property="og:title" content="Panduan Lengkap Offroad di Coban Talun, Batu – Batu Outbound Adventure" />
+    <meta property="og:description" content="Jelajahi medan tangguh hutan pinus dengan Jeep 4x4 di Coban Talun." />
+    <meta property="og:image"
+        content="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=1200&q=80" />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,6 +29,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
+
+    <!-- Article Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "Panduan Lengkap Offroad di Coban Talun, Batu",
+      "image": "https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=1200&q=80",
+      "author": {
+        "@type": "Person",
+        "name": "Admin"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Batu Outbound Adventure",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://advanturetimoutbound.vercel.app/favicon-32x32.png"
+        }
+      },
+      "datePublished": "2024-02-20"
+    }
+    </script>
 
     <style>
         :root {
@@ -518,7 +556,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND</span></a>
+            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
@@ -558,7 +596,7 @@
             <div class="article-content">
 
                 <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=1200&q=80"
-                    alt="Offroad Coban Talun" />
+                    alt="Offroad Coban Talun" loading="lazy" />
 
                 <p>Bagi Anda yang haus akan adrenalin dan petualangan, offroad di kawasan Coban Talun, Kota Batu, adalah
                     pengalaman yang wajib dicoba. Terletak di ketinggian sekitar 1.200 meter di atas permukaan laut,
@@ -590,8 +628,8 @@
                     kondisi sehat dan tidak memiliki riwayat penyakit jantung atau tekanan darah tinggi, karena
                     perjalanan bisa cukup mendebarkan.</p>
 
-                <img src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?auto=format&fit=crop&w=1200&q=80"
-                    alt="Jeep offroad" />
+                <img src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?auto=format&fit=crop&w=1200&q=80"
+                    alt="Jeep Adventure" loading="lazy" />
 
                 <h2>Rute dan Durasi Perjalanan</h2>
                 <p>Perjalanan offroad di Coban Talun umumnya berlangsung selama 1,5 hingga 2 jam, tergantung pada paket
@@ -641,7 +679,7 @@
                 <div class="col-md-6">
                     <div class="related-card">
                         <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=800&q=80"
-                            alt="Outbound">
+                            alt="Outbound" loading="lazy">
                         <div class="card-body">
                             <h5><a href="artikel-manfaat-outbound.html">5 Manfaat Outbound bagi Karyawan Perusahaan</a>
                             </h5>
@@ -652,7 +690,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting">
+                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting" loading="lazy">
                         <div class="card-body">
                             <h5><a href="artikel-rafting-batu-malang.html">Kenapa Batu Malang Jadi Lokasi Rafting
                                     Terbaik?</a></h5>
@@ -669,7 +707,7 @@
         <div class="container">
             <div class="row gy-5">
                 <div class="col-md-6 col-lg-4">
-                    <div class="footer-brand">BATU<span>OUTBOUND</span></div>
+                    <div class="footer-brand">BATU<span>OUTBOUND ADVENTURE</span></div>
                     <p class="footer-desc">Provider Outdoor & Indoor Training No. 1 di Batu Malang. Solusi profesional
                         untuk kebutuhan Gathering dan Team Building Anda.</p>
                     <div class="mt-3">
