--- a/index.html
+++ b/index.html
@@ -4,7 +4,41 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Batu Outbound – Spesialis Petualangan & Team Building</title>
+    <title>Batu Outbound Adventure – Spesialis Petualangan & Team Building Malang</title>
+    <meta name="description"
+        content="Batu Outbound Adventure: Provider outbound, gathering, teambuilding, jeep offroad, dan rafting profesional di Kota Batu Malang. Solusi terbaik untuk SDM perusahaan." />
+    <meta name="keywords"
+        content="outbound batu, outbound malang, team building batu malang, rafting batu, jeep offroad coban talun, gathering perusahaan malang" />
+    <link rel="canonical" href="https://advanturetimoutbound.vercel.app/" />
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://advanturetimoutbound.vercel.app/" />
+    <meta property="og:title" content="Batu Outbound Adventure – Spesialis Petualangan & Team Building Malang" />
+    <meta property="og:description"
+        content="Provider outbound & training profesional No. 1 di Batu Malang. Solusi untuk gathering dan team building perusahaan Anda." />
+    <meta property="og:image"
+        content="https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://advanturetimoutbound.vercel.app/" />
+    <meta property="twitter:title" content="Batu Outbound Adventure – Spesialis Petualangan & Team Building Malang" />
+    <meta property="twitter:description"
+        content="Provider outbound & training profesional No. 1 di Batu Malang. Solusi untuk gathering dan team building perusahaan Anda." />
+    <meta property="twitter:image"
+        content="https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <meta name="theme-color" content="#1E4D2B">
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,6 +48,79 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
+
+    <!-- Structured Data (JSON-LD) for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Batu Outbound Adventure",
+      "image": "https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp",
+      "@id": "https://advanturetimoutbound.vercel.app/",
+      "url": "https://advanturetimoutbound.vercel.app/",
+      "telephone": "+62895639068080",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Basecamp Coban Talun",
+        "addressLocality": "Batu",
+        "addressRegion": "Jawa Timur",
+        "postalCode": "65332",
+        "addressCountry": "ID"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -7.834418,
+        "longitude": 112.522204
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      },
+      "sameAs": [
+        "https://www.instagram.com/batuoutbound/"
+      ]
+    }
+    </script>
+
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "Apa saja manfaat mengikuti kegiatan outbound?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Outbound bermanfaat untuk meningkatkan kerjasama tim, mengasah jiwa kepemimpinan, melatih pola pikir strategis, serta sebagai sarana penyegaran."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Dimana lokasi outbound terbaik di Kota Batu?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Salah satu lokasi terbaik adalah kawasan Coban Talun yang menawarkan udara sejuk, hutan pinus, serta fasilitas offroad dan rafting."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Berapa harga paket outbound di Batu Outbound Adventure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Harga paket fleksibel sesuai kebutuhan, mulai dari paket hemat pelajar hingga paket corporate eksklusif."
+        }
+      }]
+    }
+    </script>
 
     <style>
         /* ─── TOKENS ─── */
@@ -861,7 +968,7 @@
     <!-- ─── NAVBAR ─── -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">BATU<span>OUTBOUND</span></a>
+            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
@@ -1004,7 +1111,7 @@
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
                         <img src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?auto=format&fit=crop&w=800&q=80"
-                            alt="Outbound Hemat" />
+                            alt="Outbound Hemat" loading="lazy" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <span class="pkg-badge">Terpopuler</span>
@@ -1018,7 +1125,7 @@
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
                         <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                            alt="Jalur Offroad" />
+                            alt="Jalur Offroad" loading="lazy" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <div class="pkg-title">Jalur Offroad</div>
@@ -1031,7 +1138,7 @@
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
                         <img src="https://images.unsplash.com/photo-1552674605-db6ffd4facb5?auto=format&fit=crop&w=800&q=80"
-                            alt="Paket Paintball" />
+                            alt="Paket Paintball" loading="lazy" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <div class="pkg-title">Paket Paintball</div>
@@ -1042,7 +1149,8 @@
                 <!-- Card 4 -->
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
-                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure" />
+                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure"
+                            loading="lazy" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <div class="pkg-title">Rafting Adventure</div>
@@ -1075,11 +1183,13 @@
                     <div class="row g-3">
                         <div class="col-6">
                             <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=600&q=80"
-                                alt="Team 1" class="w-100 rounded-4 shadow-lg" style="height:250px;object-fit:cover;" />
+                                alt="Team 1" class="w-100 rounded-4 shadow-lg" style="height:250px;object-fit:cover;"
+                                loading="lazy" />
                         </div>
                         <div class="col-6">
                             <img src="https://images.unsplash.com/photo-1515187029135-18ee286d815b?auto=format&fit=crop&w=600&q=80"
-                                alt="Team 2" class="w-100 rounded-4 shadow-lg" style="height:250px;object-fit:cover;" />
+                                alt="Team 2" class="w-100 rounded-4 shadow-lg" style="height:250px;object-fit:cover;"
+                                loading="lazy" />
                         </div>
                     </div>
                 </div>
@@ -1182,13 +1292,78 @@
         </div>
     </section>
 
+    <!-- ─── FAQ (AEO/GEO Optimization) ─── -->
+    <section class="faq-section" id="faq"
+        style="background: var(--dark); border-top: 1px solid rgba(255,255,255,0.05);">
+        <div class="container">
+            <div class="text-center mb-5">
+                <div class="section-label">Tanya Jawab</div>
+                <h2 class="section-title">Pertanyaan Umum</h2>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="accordion accordion-flush" id="faqAccordion">
+                        <div
+                            class="accordion-item bg-transparent border-bottom border-secondary border-opacity-25 py-3">
+                            <h3 class="accordion-header" id="faq-h1">
+                                <button class="accordion-button collapsed bg-transparent text-white fw-bold fs-5 px-0"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
+                                    Apa saja manfaat mengikuti kegiatan outbound?
+                                </button>
+                            </h3>
+                            <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body px-0 text-white-50">
+                                    Outbound bermanfaat untuk meningkatkan kerjasama tim (teamwork), mengasah jiwa
+                                    kepemimpinan (leadership), melatih pola pikir strategis, serta sebagai sarana
+                                    penyegaran (refreshing) untuk mengurangi tingkat stres kerja.
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class="accordion-item bg-transparent border-bottom border-secondary border-opacity-25 py-3">
+                            <h3 class="accordion-header" id="faq-h2">
+                                <button class="accordion-button collapsed bg-transparent text-white fw-bold fs-5 px-0"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+                                    Dimana lokasi outbound terbaik di Kota Batu?
+                                </button>
+                            </h3>
+                            <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body px-0 text-white-50">
+                                    Salah satu lokasi outbound terbaik adalah kawasan Coban Talun, Kota Batu. Tempat ini
+                                    menawarkan udara yang sejuk, hutan pinus yang asri, serta jalur yang menantang untuk
+                                    kegiatan offroad dan rafting.
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class="accordion-item bg-transparent border-bottom border-secondary border-opacity-25 py-3">
+                            <h3 class="accordion-header" id="faq-h3">
+                                <button class="accordion-button collapsed bg-transparent text-white fw-bold fs-5 px-0"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
+                                    Berapa harga paket outbound di Batu Outbound Adventure?
+                                </button>
+                            </h3>
+                            <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body px-0 text-white-50">
+                                    Harga paket kami sangat kompetitif dan fleksibel, mulai dari paket hemat untuk
+                                    pelajar hingga paket eksekutif untuk perusahaan besar. Anda dapat menghubungi tim
+                                    kami untuk mendapatkan penawaran harga terbaik.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- ─── FOOTER ─── -->
     <footer>
         <div class="container">
             <div class="row gy-5">
                 <!-- Brand -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="footer-brand">BATU<span>OUTBOUND</span></div>
+                    <div class="footer-brand" id="footer-brand">BATU<span>OUTBOUND ADVENTURE</span></div>
                     <p class="footer-desc">Provider Outdoor & Indoor Training No. 1 di Batu Malang. Solusi profesional
                         untuk kebutuhan Gathering dan Team Building Anda.</p>
                     <div class="mt-3">
