--- a/about.html
+++ b/about.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tentang Kami – Batu Outbound</title>
+    <title>Tentang Kami – Batu Outbound Adventure</title>
+    <meta name="description"
+        content="Kenali lebih dekat Batu Outbound Adventure, mitra terpercaya Anda untuk pengembangan SDM melalui outbound dan pelatihan di Kota Batu Malang." />
+    <link rel="canonical" href="https://advanturetimoutbound.vercel.app/about.html" />
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://advanturetimoutbound.vercel.app/about.html" />
+    <meta property="og:title" content="Tentang Kami – Batu Outbound Adventure" />
+    <meta property="og:description"
+        content="Kenali visi, misi, dan tim profesional di balik Batu Outbound Adventure." />
+    <meta property="og:image"
+        content="https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp" />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -394,7 +410,7 @@
     <!-- ─── NAVBAR ─── -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND</span></a>
+            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
@@ -442,7 +458,7 @@
                 </div>
                 <div class="col-lg-6">
                     <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=800&q=80"
-                        alt="Team" class="w-100 rounded-4 shadow-lg">
+                        alt="Team" class="w-100 rounded-4 shadow-lg" loading="lazy">
                 </div>
             </div>
         </div>
@@ -516,7 +532,7 @@
         <div class="container">
             <div class="row gy-5">
                 <div class="col-md-6 col-lg-4">
-                    <div class="footer-brand">BATU<span>OUTBOUND</span></div>
+                    <div class="footer-brand">BATU<span>OUTBOUND ADVENTURE</span></div>
                     <p class="footer-desc">Provider Outdoor & Indoor Training No. 1 di Batu Malang. Solusi profesional
                         untuk kebutuhan Gathering dan Team Building Anda.</p>
                     <div class="mt-3">
