--- a/artikel-manfaat-outbound.html
+++ b/artikel-manfaat-outbound.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>5 Manfaat Outbound bagi Karyawan Perusahaan – Batu Outbound</title>
+    <title>5 Manfaat Outbound bagi Karyawan Perusahaan – Batu Outbound Adventure</title>
+    <meta name="description"
+        content="Temukan 5 manfaat utama outbound bagi karyawan perusahaan, mulai dari peningkatan kerjasama tim hingga produktivitas kerja." />
+    <link rel="canonical" href="https://advanturetimoutbound.vercel.app/artikel-manfaat-outbound.html" />
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://advanturetimoutbound.vercel.app/artikel-manfaat-outbound.html" />
+    <meta property="og:title" content="5 Manfaat Outbound bagi Karyawan Perusahaan – Batu Outbound Adventure" />
+    <meta property="og:description"
+        content="Outbound bukan sekadar liburan, temukan bagaimana kegiatan ini dapat merubah dinamika kerja tim Anda." />
+    <meta property="og:image"
+        content="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=1200&q=80" />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,6 +30,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
+
+    <!-- Article Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "5 Manfaat Outbound bagi Karyawan Perusahaan",
+      "image": "https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=1200&q=80",
+      "author": {
+        "@type": "Person",
+        "name": "Admin"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Batu Outbound Adventure",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://advanturetimoutbound.vercel.app/favicon-32x32.png"
+        }
+      },
+      "datePublished": "2024-02-24"
+    }
+    </script>
 
     <style>
         :root {
@@ -525,7 +564,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND</span></a>
+            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
@@ -565,7 +604,7 @@
             <div class="article-content">
 
                 <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=1200&q=80"
-                    alt="Outbound Batu Malang" />
+                    alt="Outbound Batu Malang" loading="lazy" />
 
                 <p>Outbound bukan sekadar liburan atau acara jalan-jalan biasa. Kegiatan ini merupakan metode pelatihan
                     yang dirancang secara khusus untuk meningkatkan kualitas sumber daya manusia melalui pengalaman
@@ -602,7 +641,7 @@
                     mental karyawan.</p>
 
                 <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?auto=format&fit=crop&w=1200&q=80"
-                    alt="Tim bahagia" />
+                    alt="Tim bahagia" loading="lazy" />
 
                 <h2>4. Meningkatkan Motivasi dan Produktivitas</h2>
                 <p>Karyawan yang merasa dihargai dan diperhatikan oleh perusahaan cenderung memiliki motivasi kerja yang
@@ -649,7 +688,7 @@
                 <div class="col-md-6">
                     <div class="related-card">
                         <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                            alt="Offroad">
+                            alt="Offroad" loading="lazy">
                         <div class="card-body">
                             <h5><a href="artikel-offroad-coban-talun.html">Panduan Lengkap Offroad di Coban Talun,
                                     Batu</a></h5>
@@ -659,7 +698,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting">
+                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting" loading="lazy">
                         <div class="card-body">
                             <h5><a href="artikel-rafting-batu-malang.html">Kenapa Batu Malang Jadi Lokasi Rafting
                                     Terbaik?</a></h5>
@@ -676,7 +715,7 @@
         <div class="container">
             <div class="row gy-5">
                 <div class="col-md-6 col-lg-4">
-                    <div class="footer-brand">BATU<span>OUTBOUND</span></div>
+                    <div class="footer-brand">BATU<span>OUTBOUND ADVENTURE</span></div>
                     <p class="footer-desc">Provider Outdoor & Indoor Training No. 1 di Batu Malang. Solusi profesional
                         untuk kebutuhan Gathering dan Team Building Anda.</p>
                     <div class="mt-3">
