--- a/artikel-rafting-batu-malang.html
+++ b/artikel-rafting-batu-malang.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kenapa Batu Malang Jadi Lokasi Rafting Terbaik? – Batu Outbound</title>
+    <title>Kenapa Batu Malang Jadi Lokasi Rafting Terbaik? – Batu Outbound Adventure</title>
+    <meta name="description"
+        content="Temukan alasan mengapa Batu Malang menjadi primadona rafting di Jawa Timur. Info sungai, jeram menantang, dan keindahan alamnya." />
+    <link rel="canonical" href="https://advanturetimoutbound.vercel.app/artikel-rafting-batu-malang.html" />
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://advanturetimoutbound.vercel.app/artikel-rafting-batu-malang.html" />
+    <meta property="og:title" content="Kenapa Batu Malang Jadi Lokasi Rafting Terbaik? – Batu Outbound Adventure" />
+    <meta property="og:description"
+        content="Aliran sungai Brantas yang menantang dan pemandangan eksotis menanti Anda." />
+    <meta property="og:image"
+        content="https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp" />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,6 +30,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
+
+    <!-- Article Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "Kenapa Batu Malang Jadi Lokasi Rafting Terbaik?",
+      "image": "https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp",
+      "author": {
+        "@type": "Person",
+        "name": "Admin"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Batu Outbound Adventure",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://advanturetimoutbound.vercel.app/favicon-32x32.png"
+        }
+      },
+      "datePublished": "2024-02-15"
+    }
+    </script>
 
     <style>
         :root {
@@ -518,7 +557,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND</span></a>
+            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
@@ -557,7 +596,7 @@
         <div class="container">
             <div class="article-content">
 
-                <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Batu Malang" />
+                <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure" loading="lazy" />
 
                 <p>Batu Malang bukan hanya dikenal sebagai kota wisata dengan udara sejuk dan apel yang manis. Di balik
                     keindahan alamnya, tersimpan potensi wisata air yang luar biasa — khususnya rafting. Aliran sungai
@@ -591,8 +630,8 @@
                     tajam dan lekukan-lekukan sungai yang membutuhkan koordinasi tim yang solid. Sungai ini cocok untuk
                     tim yang sudah pernah mencoba rafting sebelumnya.</p>
 
-                <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?auto=format&fit=crop&w=1200&q=80"
-                    alt="Tim rafting" />
+                <img src="https://images.unsplash.com/photo-1551632811-561732d1e306?auto=format&fit=crop&w=1200&q=80"
+                    alt="Rafting Team" loading="lazy" />
 
                 <h2>Mengapa Rafting Cocok untuk Team Building?</h2>
                 <p>Rafting bukan hanya soal menaklukkan jeram. Ada banyak nilai team building yang bisa dipetik dari
@@ -651,7 +690,7 @@
                 <div class="col-md-6">
                     <div class="related-card">
                         <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=800&q=80"
-                            alt="Outbound">
+                            alt="Outbound" loading="lazy">
                         <div class="card-body">
                             <h5><a href="artikel-manfaat-outbound.html">5 Manfaat Outbound bagi Karyawan Perusahaan</a>
                             </h5>
@@ -663,7 +702,7 @@
                 <div class="col-md-6">
                     <div class="related-card">
                         <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                            alt="Offroad">
+                            alt="Offroad" loading="lazy">
                         <div class="card-body">
                             <h5><a href="artikel-offroad-coban-talun.html">Panduan Lengkap Offroad di Coban Talun,
                                     Batu</a></h5>
@@ -680,7 +719,7 @@
         <div class="container">
             <div class="row gy-5">
                 <div class="col-md-6 col-lg-4">
-                    <div class="footer-brand">BATU<span>OUTBOUND</span></div>
+                    <div class="footer-brand">BATU<span>OUTBOUND ADVENTURE</span></div>
                     <p class="footer-desc">Provider Outdoor & Indoor Training No. 1 di Batu Malang. Solusi profesional
                         untuk kebutuhan Gathering dan Team Building Anda.</p>
                     <div class="mt-3">
