--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog – Batu Outbound</title>
+    <title>Blog & Artikel Petualangan – Batu Outbound Adventure</title>
+    <meta name="description"
+        content="Kumpulan tips, berita, dan informasi terbaru seputar outbound, teambuilding, dan wisata petualangan di Batu Malang." />
+    <link rel="canonical" href="https://advanturetimoutbound.vercel.app/blog.html" />
+
+    <!-- OpenGraph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://advanturetimoutbound.vercel.app/blog.html" />
+    <meta property="og:title" content="Blog & Artikel Petualangan – Batu Outbound Adventure" />
+    <meta property="og:description" content="Tips dan panduan outbound terbaik di Malang Raya." />
+    <meta property="og:image"
+        content="https://advanturetimoutbound.vercel.app/images/Rafting%20di%20Sungai%20Brantas%20Batu%20Malang.webp" />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -479,7 +494,7 @@
     <!-- ─── NAVBAR ─── -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND</span></a>
+            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
@@ -528,7 +543,7 @@
                     <div class="blog-card">
                         <div class="blog-img-wrapper">
                             <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=800&q=80"
-                                alt="Outbound Batu">
+                                alt="Outbound Batu" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -550,7 +565,7 @@
                     <div class="blog-card">
                         <div class="blog-img-wrapper">
                             <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                                alt="Offroad Coban Talun">
+                                alt="Offroad Coban Talun" loading="lazy">
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -571,7 +586,8 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-card">
                         <div class="blog-img-wrapper">
-                            <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure">
+                            <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure"
+                                loading="lazy">
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -615,7 +631,7 @@
         <div class="container">
             <div class="row gy-5">
                 <div class="col-md-6 col-lg-4">
-                    <div class="footer-brand">BATU<span>OUTBOUND</span></div>
+                    <div class="footer-brand">BATU<span>OUTBOUND ADVENTURE</span></div>
                     <p class="footer-desc">Provider Outdoor & Indoor Training No. 1 di Batu Malang. Solusi profesional
                         untuk kebutuhan Gathering dan Team Building Anda.</p>
                     <div class="mt-3">
