--- a/blog.html
+++ b/blog.html
@@ -51,6 +51,14 @@
             box-sizing: border-box;
         }
 
+        html,
+        body {
+            overflow-x: hidden;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         html {
             scroll-behavior: smooth;
         }
@@ -59,7 +67,6 @@
             font-family: var(--font-body);
             background: var(--dark);
             color: #fff;
-            overflow-x: hidden;
         }
 
         /* ─── NAV ─── */
@@ -493,9 +500,10 @@
 
     <!-- ─── NAVBAR ─── -->
     <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a class="navbar-brand me-0" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
+            <button class="navbar-toggler border-0 px-0" type="button" data-bs-toggle="collapse"
+                data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
             <div class="collapse navbar-collapse" id="mainNav">
