--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
             box-sizing: border-box;
         }
 
+        html,
+        body {
+            overflow-x: hidden;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         html {
             scroll-behavior: smooth;
         }
@@ -151,7 +159,6 @@
             font-family: var(--font-body);
             background: var(--dark);
             color: #fff;
-            overflow-x: hidden;
         }
 
         /* ─── NAV ─── */
@@ -967,11 +974,13 @@
 
     <!-- ─── NAVBAR ─── -->
     <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a class="navbar-brand me-0" href="index.html">BATU<span>OUTBOUND ADVENTURE</span></a>
+            <button class="navbar-toggler border-0 px-0" type="button" data-bs-toggle="collapse"
+                data-bs-target="#mainNav">
                 <i class="bi bi-list text-white fs-2"></i>
             </button>
+
             <div class="collapse navbar-collapse" id="mainNav">
                 <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-1 gap-2 mt-3 mt-lg-0">
                     <li class="nav-item"><a class="nav-link px-3" href="index.html">Home</a></li>
